manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nong-kai-prod
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nong-kai-api-prod
      app.kubernetes.io/env: prod
      app.kubernetes.io/managed-by: kustomize
  template:
    metadata:
      labels:
        app: nong-kai-api-prod
        app.kubernetes.io/env: prod
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: nong-kai-api-prod
          image: anonja/js-web-app:449b0c7
          ports:
            - containerPort: 3000
