manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nong-kai-web-prod
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: express-prod.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nong-kai-svc-prod
                port:
                  number: 80
